--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,11 +6,35 @@
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-114106230-1"></script>
     <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+        
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
 
         gtag('config', 'UA-114106230-1');
+//        ga('create', 'UA-114106230-1', {
+//            'cookieName': 'gaCookie',
+//            'cookieDomain': 'https://mordor-ga-demo.herokuapp.com/',
+//            'cookieExpires': 60 * 60 * 24 * 28  // Time in seconds.
+//        });
+
+        ga('create', 'UA-114106230-1', 'auto' );
+        ga('send', 'pageview');
+                
+//        ga(function(tracker) {
+//            var clientId = tracker.get('clientId');
+//        });        
+//        
+//        ga('set', 'userId', clientId);
+        
+        
+        
+        
+      
     </script>
   </head>
   <body>
