--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,7 +22,7 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 //            'cookieExpires': 60 * 60 * 24 * 28  // Time in seconds.
 //        });
 
-        ga('create', 'UA-114106230-1', 'auto', { userId: Math.floor(Math.random() * 1000) } );
+        ga('create', 'UA-114106230-1', 'auto', { clientId: 'abcd' } );
         ga('send', 'pageview');
                 
 //        ga(function(tracker) {
