--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,11 +25,11 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
         ga('create', 'UA-114106230-1', 'auto', { clientId: 'abcd' } );
         ga('send', 'pageview');
                 
-//        ga(function(tracker) {
-//            var clientId = tracker.get('clientId');
-//        });        
-//        
-//        ga('set', 'userId', clientId);
+        ga(function(tracker) {
+            var clientId = tracker.get('clientId');
+            ga('set', 'userId', clientId);
+        });              
+        
         
         
         
