--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,19 +25,19 @@
         
         
         
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-
-        gtag('config', 'UA-114106230-1');
-
-        ga('create', 'UA-114106230-1', 'auto' );
-        ga('send', 'pageview');
-                
-        ga(function(tracker) {
-            var clientId = tracker.get('clientId');
-            ga('set', 'userId', clientId);
-        });              
+//        window.dataLayer = window.dataLayer || [];
+//        function gtag(){dataLayer.push(arguments);}
+//        gtag('js', new Date());
+//
+//        gtag('config', 'UA-114106230-1');
+//
+//        ga('create', 'UA-114106230-1', 'auto' );
+//        ga('send', 'pageview');
+//                
+//        ga(function(tracker) {
+//            var clientId = tracker.get('clientId');
+//            ga('set', 'userId', clientId);
+//        });              
         
         
         
