--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,6 +22,7 @@
         });
         //var dimensionValue = 'SOME_DIMENSION_VALUE';
         ga('set', 'dimension1', randomId);
+        ga('set', 'userId', randomId); // Set the user ID using signed-in user_id.
         
         
         
