--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,7 +21,7 @@
           console.log(clientId);
         });
         //var dimensionValue = 'SOME_DIMENSION_VALUE';
-        ga('set', 'dimension1', randomId);
+        ga('set', 'dimension1', 'mordor-' + randomId);
         ga('set', 'userId', randomId); // Set the user ID using signed-in user_id.
         
         
