--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
         var randomId = Math.floor(Math.random() * 200);
-        ga('create', 'UA-114106230-1', 'auto', { "userId": randomId });
+        ga('create', 'UA-114106230-1', 'auto', { "userId": 'mordor-' + randomId });
         ga('require', 'displayfeatures');
         ga('send', 'pageview');
         
