--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,48 +6,11 @@
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-114106230-1"></script>
     <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
 
-        var randomId = Math.floor(Math.random() * 200);
-        ga('create', 'UA-114106230-1', 'auto', { "userId": 'mordor-' + randomId });
-        ga('require', 'displayfeatures');
-        ga('send', 'pageview');
-        
-        ga(function(tracker) {
-          clientId = tracker.get('clientId');
-          console.log(clientId);
-        });
-        //var dimensionValue = 'SOME_DIMENSION_VALUE';
-        ga('set', 'dimension1', 'mordor-' + randomId);
-        ga('set', 'userId', randomId); // Set the user ID using signed-in user_id.
-        
-        
-        
-        
-        
-        
-//        window.dataLayer = window.dataLayer || [];
-//        function gtag(){dataLayer.push(arguments);}
-//        gtag('js', new Date());
-//
-//        gtag('config', 'UA-114106230-1');
-//
-//        ga('create', 'UA-114106230-1', 'auto' );
-//        ga('send', 'pageview');
-//                
-//        ga(function(tracker) {
-//            var clientId = tracker.get('clientId');
-//            ga('set', 'userId', clientId);
-//        });              
-        
-        
-        
-        
-        
-      
+        gtag('config', 'UA-114106230-1');
     </script>
   </head>
   <body>
