--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,10 +10,15 @@
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'UA-114106230-1');
 
         ga('create', 'UA-114106230-1', 'auto');
         ga('require', 'displayfeatures');
-        ga('send', 'pageview');
+        
         ga(function() {
             // Logs an array of all tracker objects.
             //console.log(ga.getAll());
@@ -21,7 +26,11 @@
         ga(function(tracker) {
             clientId = tracker.get('clientId');
             console.log(clientId);
+            ga('set', 'dimension1', clientId);
+            ga('send', 'pageview');
         });
+        
+        console.log(navigator.userAgent);
     </script>
   </head>
   <body>
