--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-114106230-1"></script>
-    <script>
+    <script type="text/javascript">
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -19,18 +19,12 @@
         ga('create', 'UA-114106230-1', 'auto');
         ga('require', 'displayfeatures');
         
-        ga(function() {
-            // Logs an array of all tracker objects.
-            //console.log(ga.getAll());
-        });
         ga(function(tracker) {
             clientId = tracker.get('clientId');
             console.log(clientId);
             ga('set', 'dimension1', clientId);
             ga('send', 'pageview');
-        });
-        
-        console.log(navigator.userAgent);
+        });              
     </script>
   </head>
   <body>
