--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,7 +24,17 @@
             console.log(clientId);
             ga('set', 'dimension1', clientId);
             ga('send', 'pageview');
-        });              
+        });
+        
+        
+    
+        window.__lo_site_id = 103798;
+
+	(function() {
+		var wa = document.createElement('script'); wa.type = 'text/javascript'; wa.async = true;
+		wa.src = 'https://d10lpsik1i8c69.cloudfront.net/w.js';
+		var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(wa, s);
+	  })();
     </script>
   </head>
   <body>
@@ -33,3 +43,4 @@
     <a href="/users">Click here to go to users page</a>
   </body>
 </html>
+
